# Heroes-app-api

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini
app/: conftest.py  main.py
app/core/: config.py  db.py  models.py
app/heroes/: api.py  crud.py  dependencies.py  models.py
app/heroes/data/: data.json
app/heroes/tests/: test_heroes.py
app/routers/api_v1/: endpoints.py
migrations/: env.py  script.py.mako
migrations/versions/: 13b22cb91f65_initial.py
